--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900"
     rel="stylesheet">
 
-  <!---->
+  <!-- esta es una modificacion desde github-->
 </head>
 <body>
 
